# FIXIO-AI

./: .replit  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py
.config/.semgrep/: settings.yml
attached_assets/: Pasted--Pages-to-Add-Triggered-by-user-navigation-button-clicks-About-Us-Page-Route-about-Content--1745138454747.txt  Pasted-Pasted-Create-a-fully-responsive-and-elegant-full-stack-blog-website-called-KnowLog-KnowLog-is-a-kn--1745141194054.txt
attached_assets/DataAnalyzerPro/: .replit  app.py  models.py
attached_assets/DataAnalyzerPro/attached_assets/: Pasted-Create-a-feature-rich-Fixio-web-application-that-provides-a-range-of-tools-for-editing-and-conve-1745134875047.txt  Pasted-Create-a-fully-responsive-and-elegant-full-stack-blog-website-called-KnowLog-KnowLog-is-a-kn-1745141035313.txt
routes/: assistant.py  auth.py  editor_tools.py  media_tools.py  pdf_tools.py  security_tools.py  static_pages.py
temp/e5d37ee5-d58e-407b-9b81-bfa56a0a515a/: processed_EXPERIMENT_AI_EDITOR.xlsx
templates/: ai_assistant.html  background_remover.html  base.html  doc_converter.html  image_compressor.html  image_converter.html  index.html  mb_gb_converter.html  pdf_merger.html  pdf_pages_recovery.html  watermark_remover.html
templates/auth/: profile.html  register.html
templates/editor/: certificate_editor.html
templates/media/: audio_to_video.html
templates/pages/: faq.html  privacy.html  support.html
templates/security/: pdf_protect.html
utils/: editor_utils.py  file_handler.py  image_utils.py  media_utils.py
(+26 files in other folders)
